# UdpSocketSamples

./: README.md
c/: CMakeLists.txt  recv.c  sender.c  udp_receiver.c  udp_sender.c
c/cmake/: CacheDefaults.cmake  EnableWarnings.cmake
haskell/: recv.hs  sender.hs
python/: echo_client.py  echo_server.py  recv.py  sender.py
